<resources>
    <string name="app_name">Aryan Career Academy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Current Affairs</string>
    <string name="title_notifications">Job Updates</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="start">start</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="slide_2_title">Guest Lectures by IAS and KAS officers</string>
    <string name="slide_3_title">Personality Development</string>
    <string name="slide_4_title">Assessment</string>
    <string name="slide_1_title">Slide1</string>
    <string name="slide_1_desc">Coaching from Experienced Lecturer from all over state with free notes</string>
    <string name="slide_4_desc">Weekly unit test will be conducting</string>
    <string name="slide_3_desc">Weekly Personality development classes from Human Resource experts</string>
    <string name="slide_2_desc">Weekly Guest Lectures from IAS and KAS officers and Experts</string>
    <string name="welcome">Welcome</string>
    <string name="tex">Text</string>
    <string name="contact_us">Contact Us</string>
    <string name="events">Events</string>
    <string name="feedback">Feedback</string>
    <string name="confirmation">Confirm</string>
    <string name="english">English</string>
    <string name="kannada">Kannada</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exp_lect">Experienced Lecturer</string>
    <string name="engish">English</string>
    <string name="continu">Continue</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="registration">Registration</string>
    <string name="tell_us_about_you">Tell us about you to serve you better</string>
    <string name="email">Email</string>
    <string name="interest">Area of Interest</string>
    <string name="register">register</string>
    <string name="name_required">Name Required</string>
    <string name="phone_correct">Enter 10 digit mobile number</string>
    <string name="please_select_area">Please select one are of interest</string>
    <string name="default_notification_channel_id">fcm channels</string>
    <string name="later_you_can_change">Later You can change the language in settings</string>
    <string name="kas_details"><b>Eligibility:</b> \n\nGraduates &amp; Under Graduates.\n\nAge limit &amp; Attempts:\n\nGM Category – 35 years and 5 attempts\n\nOther backward Category – 38 years and 7 attempts\n\nSC / ST Category – 40 years &amp; Unlimited attempts\nPhysically handicapped or widow candidates – 45 years &amp; Unlimited attempts
    \n\nSyllabus for Preliminary Examination:\n\nPAPER – I:
        \n\n

    Current events of National and International importance.\n\n
    Humanities – History of India – Emphasis shall be on broad general understanding of the subject in its social, economic, cultural and political aspects with a focus on Indian national movement with special emphasis on Karnataka.\n
    World Geography and Geography of India with a focus on Karnataka.\n
    Indian polity.\n
    Economy, country’s political system, rural development, planning and economic reforms in India-sustainable development, poverty alleviation, demographics, social sector initiatives etc.,

    </string>
    <string name="kas_syllabus">Current events of National and International importance.\n\n
    Humanities – History of India – Emphasis shall be on broad general understanding of the subject in its social, economic, cultural and political aspects with a focus on Indian national movement with special emphasis on Karnataka.\n
    World Geography and Geography of India with a focus on Karnataka.\n
    Indian polity.\n
    Economy, country’s political system, rural development, planning and economic reforms in India-sustainable development, poverty alleviation, demographics, social sector initiatives etc.,
</string>
    <string name="kas_elig">Graduates &amp; Under Graduates.</string>
    <string name="kas_attempts">GM Category – 35 years and 5 attempts\n\nOther backward Category – 38 years and 7 attempts\n\nSC / ST Category – 40 years &amp; Unlimited attempts\nPhysically handicapped or widow candidates – 45 years &amp; Unlimited attempts</string>
    <string name="qualification">Qualification</string>
    <string name="noti_date">Notification Date</string>
    <string name="last_date">Last Date</string>
    <string name="mode_of_exam">Mode of Exxam</string>
    <string name="mode_of_payment">Mode of Payment</string>
    <string name="documents">Documents</string>
    <string name="exam_date">Exam Date</string>
    <string name="no_of_post">No of Posts</string>
    <string name="website">Website</string>
    <string name="eligibiltiy">Eligibility:</string>
    <string name="attempts">Age Limit and Attempts</string>
    <string name="syllabus">Syllabus:</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="guest_lect">Guest Lectures</string>
    <string name="gallery">Gallery</string>
    <string name="date">Date</string>
    <string name="place">Place</string>
    <string name="raichur">Raichur</string>
    <string name="some_thing_wrong">Some thing went wrong</string>
    <string name="title">Title</string>
    <string name="share_message">Hi I am using Aryan Career Academy app. It is very good Coaching center</string>
    <string name="share_us_via">Share Via</string>
    <string name="no_app_to_share">No apps to share</string>
    <string name="change_language">Choose Language</string>
    <string name="adds">Raichur, Karnataka</string>
    <string name="ok">Ok</string>
    <string name="email_adds">patelheggere@gmail.com</string>
    <string name="prev">prev</string>
    <string name="back">back</string>
    <string name="exam">Exam</string>
    <string name="take_test">Start</string>
</resources>
