<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.constraint.Guideline
            android:id="@+id/gl_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".4"/>

        <TextView
            android:id="@+id/tv_job_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:padding="5dp"
            android:background="@android:color/holo_blue_light"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title" />
        <TextView
            android:id="@+id/tv_dept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            android:padding="5dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_job_title"
            tools:text="Dept" />
        <include
            layout="@layout/draws_horizontal_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_dept"/>

        <TextView
            android:id="@+id/tv_qualifiacation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dept"
            android:text="@string/qualification" />
        <TextView
            android:id="@+id/tv_qualifiacation_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/gl_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_dept"
            tools:text="Qualification" />

        <TextView
            android:id="@+id/tv_noti_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_qualifiacation"
            android:text="@string/noti_date" />
        <TextView
            android:id="@+id/tv_noti_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/gl_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_qualifiacation_value"
            tools:text="Last Date" />
        <TextView
            android:id="@+id/tv_last_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_noti_date"
            android:text="@string/last_date" />
        <TextView
            android:id="@+id/tv_last_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/gl_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_noti_date_value"
            tools:text="Last Date" />
        <TextView
            android:id="@+id/tv_mode_of_exam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_last_date"
            android:text="@string/mode_of_exam" />
        <TextView
            android:id="@+id/tv_mode_of_exam_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/gl_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_last_date_value"
            tools:text="Mode of Exam" />
        <TextView
            android:id="@+id/tv_payment_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mode_of_exam"
            android:text="@string/mode_of_payment" />
        <TextView
            android:id="@+id/tv_payment_mode_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/gl_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_mode_of_exam_value"
            tools:text="Mode of Payment" />

        <TextView
            android:id="@+id/tv_documents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_payment_mode"
            android:text="@string/documents" />
        <TextView
            android:id="@+id/tv_documents_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/gl_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_payment_mode_value"
            tools:text="Documents" />
        <TextView
            android:id="@+id/tv_exam_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_documents"
            android:text="@string/exam_date" />
        <TextView
            android:id="@+id/tv_exam_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/gl_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_documents_value"
            tools:text="Exam Date" />
        <TextView
            android:id="@+id/tv_no_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_exam_date"
            android:text="@string/no_of_post" />
        <TextView
            android:id="@+id/tv_no_of_post_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/gl_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_exam_date_value"
            tools:text="20" />

        <TextView
            android:id="@+id/tv_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/website"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_no_posts" />

        <TextView
            android:id="@+id/tv_web_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/gl_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_no_of_post_value"
            tools:text="Website" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
